#
# Copyright (c) 2012      Los Alamos National Security, LLC.  All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

headers += \
	base/net_utils.h \
	base/str_utils.h \
	base/pbc/pbc.h \
	base/pbc/src/alloc.h \
	base/pbc/src/array.h \
	base/pbc/src/bootstrap.h \
	base/pbc/src/context.h \
	base/pbc/src/map.h \
	base/pbc/src/pattern.h \
	base/pbc/src/proto.h \
	base/pbc/src/stringpool.h \
	base/pbc/src/varint.h 
			
libhamster_common_la_SOURCES += \
        base/net_utils.c \
        base/str_utils.c \
        base/hdclient.c \
        base/pbc/src/alloc.c \
        base/pbc/src/array.c \
        base/pbc/src/bootstrap.c \
        base/pbc/src/context.c \
        base/pbc/src/decode.c \
        base/pbc/src/map.c \
        base/pbc/src/pattern.c \
        base/pbc/src/proto.c \
        base/pbc/src/register.c \
        base/pbc/src/rmessage.c \
        base/pbc/src/stringpool.c \
        base/pbc/src/varint.c \
        base/pbc/src/wmessage.c
