#
# Copyright (c) 2012      Los Alamos National Security, LLC.  All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

headers += \
	src/net_utils.h \
	src/str_utils.h \
	src/pbc/pbc.h \
	src/pbc/src/alloc.h \
	src/pbc/src/array.h \
	src/pbc/src/bootstrap.h \
	src/pbc/src/context.h \
	src/pbc/src/map.h \
	src/pbc/src/pattern.h \
	src/pbc/src/proto.h \
	src/pbc/src/stringpool.h \
	src/pbc/src/varint.h 
		
libmca_hdclient_la_SOURCES += \
        src/net_utils.c \
        src/str_utils.c \
        src/hdclient.c \
        src/pbc/src/alloc.c \
        src/pbc/src/array.c \
        src/pbc/src/bootstrap.c \
        src/pbc/src/context.c \
        src/pbc/src/decode.c \
        src/pbc/src/map.c \
        src/pbc/src/pattern.c \
        src/pbc/src/proto.c \
        src/pbc/src/register.c \
        src/pbc/src/rmessage.c \
        src/pbc/src/stringpool.c \
        src/pbc/src/varint.c \
        src/pbc/src/wmessage.c
